--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ input[type="radio"]:checked+label {
     color: #000000;
     text-align: center;
     font-weight: bolder;
-    font-style: italic;
+/*     font-style: italic; */
     position: fixed;
     top: 41%;
     left: 50%;
